--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,34 @@
-name: Multi-Job Example Workflow
+name: Advanced Workflow
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - run: echo "Building the project"
 
   test:
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v2
     - run: echo "Running tests"
@@ -23,6 +36,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
+    if: github.event_name == 'workflow_dispatch'
     steps:
     - uses: actions/checkout@v2
     - run: echo "Deploying to production"
