--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - run: echo "Building the project"
+    - run: export MY_VARIABLE="Hello World"
 
   test:
     runs-on: ubuntu-latest
