--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - run: echo "Building the project"
-    - run: export MY_VARIABLE="Hello World"
 
   test:
     runs-on: ubuntu-latest
@@ -32,7 +31,12 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v2
-    - run: echo "Running tests"
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Run unit tests
+      run: python -m unittest discover -s arithmetics/tests -p 'test_*.py'
 
   deploy:
     runs-on: ubuntu-latest
